# staticTTY

./: CMakeLists.txt  ProgressBar.hpp  README.md  RunRef.hpp  StaticTTY.h  fileOutput.cpp  main.cpp  staticTTYConfig.cmake  vspace.hpp
include/: RunRef.hpp  StaticTTY.h  hspace.hpp
